# raytracer-optimisation

./: .gitignore  CMakeLists.txt  demo_valgrind.sh  main.cpp
scripts/: profile_test.sh
src/raymath/: AABB.hpp  Transform.hpp  Vector3.cpp
src/rayscene/: BSPTree.cpp  BSPTree.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Mesh.cpp  Mesh.hpp  Plane.cpp  Scene.cpp  Scene.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp
tests/: CMakeLists.txt  compare_with_baseline  test_edge_cases  test_regression  test_simple_scene
tests/baselines/: v1.0_simple_scene.json
tests/output/: complex_scene_metrics.json  mesh_metrics.json  simple_scene_metrics.json  triangles_metrics.json
tests/tests/: test_edge_cases.cpp  test_regression.cpp  test_simple_scene.cpp
tests/utils/: BenchmarkRunner.cpp  BenchmarkRunner.hpp  ImageComparator.cpp  ImageComparator.hpp  ImageHasher.cpp  ImageHasher.hpp  SceneRegistry.cpp  SceneRegistry.hpp  TestConfig.cpp  TestConfig.hpp  compare_with_baseline.cpp
